--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,9 @@ section {
     height: 10%;
     border: 1px solid black;
     overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    justify-items: center;
 }
 
 #header span {
@@ -29,12 +32,12 @@ section {
     font-size: 2em;
     font-weight: bold;
     margin-top: 0.5em;
-    margin-left: 42%
 }
 
 #header input {
-    margin-left: 10%;
-    font-size: 15px
+    font-size: 15px;
+    margin-top: 10%;
+    margin-bottom: 15%;
 }
 
 #main {
@@ -724,8 +727,9 @@ CSS tags for 'Question Post' section:
 #logoutBtn {
     color: black;
     background-color: rgb(183, 52, 5);
-    margin-left: -88%;
     padding: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    margin-top: 5%;
+    margin-bottom: 10%;
 }
