--- a/client/src/index.css
+++ b/client/src/index.css
@@ -368,7 +368,7 @@ a {
 .acolumn.right {
     padding-left: 0%;
     border-bottom: 0;
-    width: 30%;
+    width: 20%;
 }
 
 .acolumn.right .author{
@@ -777,4 +777,9 @@ CSS tags for 'Question Post' section:
     margin-top: 2%;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.acolumn.right2 {
+    width: 10%;
+    border: 0;
 }
